--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -36,16 +36,49 @@
       "execution_count": null,
       "id": "46ecc046",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Centroids:\n",
+            " [[4. 5. 6.]\n",
+            " [7. 8. 9.]\n",
+            " [1. 2. 3.]]\n",
+            "Labels: [2 0 1]\n",
+            "Centroid for 2nd cluster: [7. 8. 9.]\n",
+            "Cluster assignment for 3rd data point: 1\n"
+          ]
+        }
+      ],
       "source": [
+        "import numpy as np\n",
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "\"\"\"Create a KMeans clustering model using scikit-learn\"\"\"\n",
+        "def kmeans(X, k):\n",
+        "    # Initialize the KMeans model\n",
+        "    model = KMeans(n_clusters=k, random_state=42)\n",
+        "    # Fit the model\n",
+        "    model.fit(X)\n",
+        "    # Extract centroids and labels\n",
+        "    centroids = model.cluster_centers_\n",
+        "    labels = model.labels_\n",
+        "    # Return as a tuple\n",
+        "    return centroids, labels\n",
+        "\n",
+        "# Example\n",
         "X = np.array([[1, 2, 3],\n",
         "              [4, 5, 6],\n",
         "              [7, 8, 9]])\n",
         "\n",
         "centroids, labels = kmeans(X, k=3)\n",
         "\n",
-        "# centroids[1] --> the centroid for the second cluster\n",
-        "# labels[2] --> the cluster assignment for the third data point"
+        "# Print Results\n",
+        "print(\"Centroids:\\n\", centroids)\n",
+        "print(\"Labels:\", labels)\n",
+        "print(\"Centroid for 2nd cluster:\", centroids[1])\n",
+        "print(\"Cluster assignment for 3rd data point:\", labels[2])"
       ]
     },
     {
@@ -234,9 +267,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "i501 (pip)",
+      "display_name": "base",
       "language": "python",
-      "name": "i501-pip"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -248,7 +281,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.14"
     }
   },
   "nbformat": 4,
