--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -55,9 +55,11 @@
         "import numpy as np\n",
         "from sklearn.cluster import KMeans\n",
         "\n",
-        "\"\"\"Create a KMeans clustering model using scikit-learn\"\"\"\n",
+        "\n",
         "def kmeans(X, k):\n",
-        "    # Initialize the KMeans model\n",
+        "    \"\"\"\n",
+        "    Create a KMeans clustering model using scikit-learn\n",
+        "    \"\"\"\n",
         "    model = KMeans(n_clusters=k, random_state=42)\n",
         "    # Fit the model\n",
         "    model.fit(X)\n",
@@ -98,12 +100,72 @@
       "execution_count": null,
       "id": "c5f2c4bd",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Centroids:\n",
+            " [[7.48956916e-01 6.17079365e+01 5.78460317e+01 2.79698186e+03\n",
+            "  5.81895692e+00 5.81058957e+00 3.58750567e+00]\n",
+            " [3.08444444e-01 6.19133333e+01 5.69766667e+01 5.54922222e+02\n",
+            "  4.33500000e+00 4.34233333e+00 2.68533333e+00]\n",
+            " [2.61666667e-01 6.16633333e+01 5.79666667e+01 3.44333333e+02\n",
+            "  4.09466667e+00 4.11200000e+00 2.53000000e+00]\n",
+            " [7.70586797e-01 6.17163814e+01 5.77694377e+01 2.86234474e+03\n",
+            "  5.87168704e+00 5.85951100e+00 3.62000000e+00]\n",
+            " [2.73666667e-01 6.15166667e+01 5.76666667e+01 4.03300000e+02\n",
+            "  4.17566667e+00 4.20000000e+00 2.57600000e+00]]\n",
+            "Labels: [2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n",
+            "Centroid for 4th cluster: [7.70586797e-01 6.17163814e+01 5.77694377e+01 2.86234474e+03\n",
+            " 5.87168704e+00 5.85951100e+00 3.62000000e+00]\n",
+            "Cluster assignment for 10th diamond: 2\n"
+          ]
+        }
+      ],
       "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "# Load the diamonds dataset\n",
+        "diamonds = sns.load_dataset('diamonds')\n",
+        "numeric_diamonds = diamonds.select_dtypes(include=[np.number])\n",
+        "\n",
+        "# kmeans function from Exercise 1\n",
+        "def kmeans(X, k):\n",
+        "    \"\"\"\n",
+        "    Create a KMeans clustering model using scikit-learn\n",
+        "    \"\"\"\n",
+        "    model = KMeans(n_clusters=k, random_state=42)\n",
+        "    model.fit(X)\n",
+        "    centroids = model.cluster_centers_\n",
+        "    labels = model.labels_\n",
+        "    return centroids, labels\n",
+        "\n",
+        "# Define the kmeans_diamonds function\n",
+        "def kmeans_diamonds(n, k):\n",
+        "    \"\"\"\n",
+        "    Runs k-means clustering on the diamonds data.\n",
+        "    \"\"\"\n",
+        "    # Select the first n rows of numeric columns\n",
+        "    X = numeric_diamonds.head(n).to_numpy()\n",
+        "    \n",
+        "    # kmeans function from Exercise 1\n",
+        "    centroids, labels = kmeans(X, k)\n",
+        "    \n",
+        "    return centroids, labels\n",
+        "\n",
+        "\n",
+        "# Example\n",
         "centroids, labels = kmeans_diamonds(n=1000, k=5)\n",
         "\n",
-        "# centroids[3] --> the centroid for the fourth cluster\n",
-        "# labels[9] --> the cluster assignment for the tenth diamond"
+        "# Print Results\n",
+        "print(\"Centroids:\\n\", centroids)\n",
+        "print(\"Labels:\", labels[:15])\n",
+        "print(\"Centroid for 4th cluster:\", centroids[3])\n",
+        "print(\"Cluster assignment for 10th diamond:\", labels[9])"
       ]
     },
     {
