--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -188,16 +188,63 @@
       "execution_count": null,
       "id": "08c2b499",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Run 1/5: 0.0031 seconds\n",
+            "Run 2/5: 0.0030 seconds\n",
+            "Run 3/5: 0.0036 seconds\n",
+            "Run 4/5: 0.0091 seconds\n",
+            "Run 5/5: 0.0063 seconds\n",
+            "\n",
+            "Average runtime over 5 iterations: 0.0050 seconds\n"
+          ]
+        }
+      ],
       "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "from sklearn.cluster import KMeans\n",
         "from time import time\n",
         "\n",
-        "def my_func(x):\n",
-        "    return x + 1\n",
+        "# --- From Exercise 2 ---\n",
+        "diamonds = sns.load_dataset('diamonds')\n",
+        "numeric_diamonds = diamonds.select_dtypes(include=[np.number])\n",
         "\n",
-        "start = time()  # capture the time\n",
-        "_ = my_func(1)  # ... do something\n",
-        "t = time() - start  # calculate the runtime"
+        "def kmeans(X, k):\n",
+        "    model = KMeans(n_clusters=k, random_state=42)\n",
+        "    model.fit(X)\n",
+        "    return model.cluster_centers_, model.labels_\n",
+        "\n",
+        "def kmeans_diamonds(n, k):\n",
+        "    X = numeric_diamonds.head(n).to_numpy()\n",
+        "    centroids, labels = kmeans(X, k)\n",
+        "    return centroids, labels\n",
+        "\n",
+        "# --- Exercise 3 ---\n",
+        "def kmeans_timer(n, k, n_iter=5):\n",
+        "    \"\"\"\n",
+        "    Runs kmeans_diamonds(n, k) exactly n_iter times,\n",
+        "    records the runtime for each run, and returns the average time in seconds.\n",
+        "    \"\"\"\n",
+        "    times = []\n",
+        "\n",
+        "    for i in range(n_iter):\n",
+        "        start = time()\n",
+        "        _ = kmeans_diamonds(n, k)\n",
+        "        runtime = time() - start\n",
+        "        times.append(runtime)\n",
+        "        print(f\"Run {i+1}/{n_iter}: {runtime:.4f} seconds\")\n",
+        "\n",
+        "    avg_time = np.mean(times)\n",
+        "    return avg_time\n",
+        "\n",
+        "# Example\n",
+        "avg_runtime = kmeans_timer(n=1000, k=5, n_iter=5)\n",
+        "print(f\"\\nAverage runtime over 5 iterations: {avg_runtime:.4f} seconds\")"
       ]
     },
     {
