--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -210,7 +210,7 @@
         "from sklearn.cluster import KMeans\n",
         "from time import time\n",
         "\n",
-        "# --- From Exercise 2 ---\n",
+        "# (From Exercise 2)\n",
         "diamonds = sns.load_dataset('diamonds')\n",
         "numeric_diamonds = diamonds.select_dtypes(include=[np.number])\n",
         "\n",
@@ -224,7 +224,7 @@
         "    centroids, labels = kmeans(X, k)\n",
         "    return centroids, labels\n",
         "\n",
-        "# --- Exercise 3 ---\n",
+        "# (Exercise 3)\n",
         "def kmeans_timer(n, k, n_iter=5):\n",
         "    \"\"\"\n",
         "    Runs kmeans_diamonds(n, k) exactly n_iter times,\n",
